con los ejemplos

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Automation Qa Automation test",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/cypress run "
+    "test": "npx cypress run"
   },
   "keywords": [
     "Qa",
