--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "npx cypress run"
   },
   "keywords": [
-    "Qa",
+    "Qa Adrian",
     "Automation"
   ],
   "author": "Adrian Tillero",
